; ModuleID = '/home/carl/AnghaBench/lab/engine/code/server/extr_sv_game.c_dmlab_raycast.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/server/extr_sv_game.c_dmlab_raycast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_4__ = type { float }

@sv = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@SS_GAME = common dso_local global i64 0, align 8
@ENTITYNUM_NONE = common dso_local global i32 0, align 4
@CONTENTS_SOLID = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @dmlab_raycast(float* %0, float* %1) #0 {
  %3 = alloca float, align 4
  %4 = alloca float*, align 8
  %5 = alloca float*, align 8
  %6 = alloca %struct.TYPE_4__, align 4
  store float* %0, float** %4, align 8
  store float* %1, float** %5, align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @sv, i32 0, i32 0), align 8
  %8 = load i64, i64* @SS_GAME, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store float 0.000000e+00, float* %3, align 4
  br label %20

11:                                               ; preds = %2
  %12 = load float*, float** %4, align 8
  %13 = load float*, float** %5, align 8
  %14 = load i32, i32* @ENTITYNUM_NONE, align 4
  %15 = load i32, i32* @CONTENTS_SOLID, align 4
  %16 = load i32, i32* @qfalse, align 4
  %17 = call i32 @SV_Trace(%struct.TYPE_4__* %6, float* %12, i32* null, i32* null, float* %13, i32 %14, i32 %15, i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %19 = load float, float* %18, align 4
  store float %19, float* %3, align 4
  br label %20

20:                                               ; preds = %11, %10
  %21 = load float, float* %3, align 4
  ret float %21
}

declare dso_local i32 @SV_Trace(%struct.TYPE_4__*, float*, i32*, i32*, float*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
